<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".LoginActivity">

    <!-- Login progress -->
    <LinearLayout android:id="@+id/login_status"
                  android:visibility="gone"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">

        <ProgressBar style="?android:attr/progressBarStyleLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"/>
        <TextView
                android:id="@+id/login_status_message"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/login_progress_signing_in" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight="1"/>

        <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/dialog_frame"
                    android:padding="20dp"
                    android:layout_margin="12dp"
                >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="PVP.net Login"
                    android:id="@+id/textView"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="#fff"/>

            <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="46dp"
                        android:id="@+id/edit_ID"
                        android:inputType="text"
                        android:hint="@string/hint_id"
                        android:singleLine="true"
                        android:background="@drawable/white_text_input"
                        android:textColor="@android:color/black"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"/>

                <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="46dp"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edit_Password"
                        android:hint="@string/hint_password"
                        android:password="true"
                        android:singleLine="true"
                        android:background="@drawable/white_text_input"
                        android:textColor="@android:color/black"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"/>

            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    android:spinnerMode="dialog"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center"/>

            <CheckBox
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_account"
                        android:id="@+id/checkBox"
                        android:checked="false"/>

            <Button
                        android:layout_width="120dp"
                        android:layout_height="48dp"
                        android:text="@string/sign_in"
                        android:id="@+id/sign_in_button"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="4dp"
                        android:onClick="attemptLogin"
                        android:background="@drawable/btn_lol_style"/>

        </LinearLayout>

        <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight="1"/>

    </LinearLayout>

</merge>
